User update working well
